[package]
name = "skip-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
askama = {version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = [
  "cookie",
  "cookie-private",
  "form",
  "typed-header",
  "multipart",
] }
axum-macros = "0.4.2"
chrono = "0.4.39"
chrono-tz = "0.10.0"
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "any", "postgres", "chrono"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = {version = "0.6.2", features = [
  "fs",
  "trace",
  "compression-full",
]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
