[package]
name = "skip-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.95", default-features = false }
askama = { version = "0.13.1", features = ["alloc", "derive"], default-features = false }
axum = { version = "0.8.3", features = ["form", "http1", "tokio"], default-features = false }
axum-extra = { version = "0.10.1", features = ["form", "multipart"], default-features = false }
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["default-tls"], default-features = false }
rspotify = { version = "0.14.0", features = ["client-reqwest"], default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["macros"], default-features = false }
sqlx = { version = "0.8.4", features = ["runtime-tokio", "tls-native-tls", "json", "macros", "migrate", "postgres", "uuid"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = { version = "2.0.9", default-features = false }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["fmt"], default-features = false }
url = { version = "2.5.4", default-features = false }
